--- a/style.css
+++ b/style.css
@@ -6,7 +6,34 @@ h1 {
     font-family: sans-serif;
     text-align: center;
     margin-top: 0;
+    margin-bottom: 15;
+}
+
+h2 {
+    color: #000;
+    font-size: 1.5em;
+    font-family: sans-serif;
+    text-align: center;
+    margin-top: 0;
     margin-bottom: 0;
+}
+
+h3 {
+    color: #000;
+    font-size: 1.2em;
+    font-family: sans-serif;
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 5;
+}
+
+div {
+    color: #000;
+    font-size: 1em;
+    font-family: sans-serif;
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 2px;
 }
 
 button {
@@ -40,10 +67,6 @@ button {
     width: fit-content;
     padding: 10px;
     background-color: #b5b5b5;
-}
-
-.hidden {
-    display: none;
 }
 
 #webcam-placeholder {
