--- a/Flask/templates/forbidden_access.html
+++ b/Flask/templates/forbidden_access.html
@@ -14,12 +14,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&family=Workbench&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <title>Content Not Found</title>
+    <title>Forbidden Access</title>
 </head>
 
 <body>
     <div>
-        <h1>Content Not Found</h1>
+        <h1>Access Forbidden</h1>
     </div>
 
     <div id="return-button">
@@ -27,7 +27,7 @@
     </div>
 
     <div>
-        <p>The requested content could not be found. Please check the URL or try again later.</p>
+        <p> The requested content is forbidden. Please check the URL or try again later.</p>
         <p> Error: {{ error }}</p>
     </div>
 </body>
