UNTESTED - added fn to show resized face on seperate canvas

--- a/Flask/templates/index.html
+++ b/Flask/templates/index.html
@@ -66,6 +66,12 @@
         <h2 id="emotion">Placeholder Emotion</h2>
       </div>
 
+      <div id="cropped-face-container" style="display: none;">
+        <h2>Cropped Face</h2>
+        <canvas id="croppedFaceCanvas" width="224" height="224"></canvas>
+      </div>
+
+
       <!-- Playback and labels -->
       <div class ="horizontal-container" id="webcam-and-labels-container">
         <!-- Video playback -->
