--- a/Flask/static/css/style.css
+++ b/Flask/static/css/style.css
@@ -122,7 +122,7 @@ footer a.hover {
     margin: 25px auto;
     padding: 20px;
     /* Consider removing backgrounds on these containers for a cleaner look!!! */
-    background-color: var(--dark-grey);
+    background-color: #808080;
 }
 
 .horizontal-container {
@@ -132,7 +132,7 @@ footer a.hover {
 
     width: fit-content;
     padding: 10px;
-    background-color: var(--light-grey);
+    background-color: #b5b5b5;
 }
 
 .modal {
@@ -263,7 +263,6 @@ footer a.hover {
 
 #side-container {
     display: none;
-    padding: 20px 40px;
 }
 
 #side-container.active {
@@ -366,14 +365,4 @@ footer a.hover {
 #return-button a:hover {
     color: var(--link-highlight);
     cursor: pointer;
-}
-
-#croppedFacePlaceholder {
-    width: 224px;
-    height: 224px;
-    background-color: var(--grey);
-    font-size: 24px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
