--- a/Flask/templates/index.html
+++ b/Flask/templates/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="{{ url_for('static', filename='assets/icon.png') }}">
   <title>placeholdername :))</title>
 
-  <link rel="preconnect" hSref="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Workbench&display=swap" rel="stylesheet">
@@ -18,11 +18,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
-  <script src="{{ url_for('static', filename='scripts/utils.js') }}"></script>
   <script src="{{ url_for('static', filename='scripts/faceDetection.js') }}"></script>
-  <script src="{{ url_for('static', filename='scripts/emotionPrediction.js') }}"></script>
-  <script src="{{ url_for('static', filename='scripts/music.js') }}"></script>
-  <script src="{{ url_for('static', filename='scripts/main.js') }}"></script>
   <script async src="https://docs.opencv.org/4.5.4/opencv.js" onload="openCVLoaded()" type="text/javascript"></script>
 </head>
 
@@ -55,10 +51,8 @@
           <button id="toggleDisplay" onclick="toggleDisplay()">Hide Display</button>
         </div>
         <div class = "buttonSet" id="extraButtons" style="display: none;">
-          <!-- Show facial detection visualisation -->
+          <!-- Show facial detection visualization -->
           <button id="toggleBoundingBoxes" onclick="toggleBoundingBoxes()">Draw Bounding boxes</button>
-          <!-- Show cropped face -->
-          <button id="toggleCroppedFace" onclick="toggleCroppedFace()">Show Cropped Face</button>
           <!-- Show Classification labels -->
           <button id="toggleLabels" onclick="toggleLabels()">Show Labels</button>
         </div>
@@ -68,44 +62,34 @@
         <h2 id="emotion">Placeholder Emotion</h2>
       </div>
 
-      <div id="cropped-face-container" style="display: none;">
-        <h2>Cropped Face</h2>
-        <canvas id="croppedFaceCanvas" width="224" height="224"></canvas>
-        <div id="croppedFacePlaceholder" style="display: none;">
-          <p>No Face Detected</p>
-        </div>
-      </div>
-
-
       <!-- Playback and labels -->
       <div class ="horizontal-container" id="webcam-and-labels-container">
         <!-- Video playback -->
         <div id="webcam-placeholder">
           <p> Click Enable Webcam to view playback!</p>
         </div>
-        <div id="webcam-container" style="display: none;">
-          <video id="webcamPlayback" autoplay playsinline width="640" height="480"></video>
-        </div>
+        <div id="webcam-container" style="display: none;"></div>
         <div id="opencv-container" style="display: none;">
           <canvas id="canvasOutput" width="640" height="480"></canvas>
         </div>
         <!-- Labels -->
         <div class = "vertical-container" id="side-container">
-          <h3>Labels:</h2>
+          <h3>Labels and their values:</h2>
           <div id="label-container"></div>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- Music Area -->
-  <div id="music-section">
-    <h2>Music</h2>
-    <div id="musicPlaceHolder">
-      <p>Click start to begin listening</p>
-    </div>
-    <!-- Something... -->
+<!-- Music Area -->
+<div id="music-section">
+  <h2>Music</h2>
+  <div id="musicMessage">What mood you into?</div> <!-- Message container -->
+  <div id="musicPlaceHolder">     
+    <script> document.addEventListener("DOMContentLoaded", function() { fetchPlaylistAndPlay(); }); </script>                                                                                                                
+    <iframe id="musicPlayerIframe" style="border-radius:10px; padding:20px" src="" width="100%" height="100%" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
   </div>
+</div>
 
   <!-- Info Area -->
   <div id="info-area">
