Changed emotion selection to be based off of the duration of music selection rather than the last instance. Added table to show emotion scores

--- a/Flask/templates/index.html
+++ b/Flask/templates/index.html
@@ -104,6 +104,16 @@
     <div id="musicPlaceHolder">                                                                                                             
       <iframe id="musicPlayerIframe" style="border-radius:10px; padding:20px" src="" width="100%" height="100%" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
+    <div id="emotionScores" style="display: none;">
+      <h3>Emotion Scores:</h3>
+      <table id="emotionTable">
+        <thead>
+          <tr id="emotionTableHeader"></tr>
+          <tr id="emotionTableData"></tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </div>
   </div>
 
   <!-- Info Area -->
