--- a/Flask/static/css/style.css
+++ b/Flask/static/css/style.css
@@ -95,6 +95,10 @@ footer a {
     font-weight: bold;
 }
 
+td {
+    padding: 10px;
+}
+
 footer a.hover {
     color: var(--link-highlight) !important;
     cursor: pointer;
@@ -122,7 +126,7 @@ footer a.hover {
     margin: 25px auto;
     padding: 20px;
     /* Consider removing backgrounds on these containers for a cleaner look!!! */
-    background-color: var(--dark-grey);
+    /*background-color: var(--dark-grey);*/
 }
 
 .horizontal-container {
@@ -132,7 +136,7 @@ footer a.hover {
 
     width: fit-content;
     padding: 10px;
-    background-color: var(--light-grey);
+    background-color: var(--dark-grey);
 }
 
 .modal {
